--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             <h2>Atividades</h2>
             <p></p>
             <ul>
+                <li>Educação fornecimento de materiais didáticos e realização de atividades pedagógicas relacionadas à agricultura, meio ambiente e cidadania.</li>
+                    <li> Desenvolvimento de projetos que incentivem o engajamento dos alunos com a comunidade e a importância da participação ativa na sociedade.</li>
+                    <li>Sustentabilidade ensinamentos sobre práticas agrícolas sustentáveis e a preservação do meio ambiente.</li>
+                    <li>ências desenvolvimento de habilidades e competências que ajudem os jovens a lidar com desafios no campo e no dia a dia.</li>
                 <li>Workshops sobre técnicas de cultivo sustentável.</li>
                 <li>Palestras e debates sobre mudanças climáticas e impacto ambiental.</li>
                 <li>Campanhas de plantio de árvores e recuperação de áreas degradadas.</li>
